Agregando datos de la BD al template lista_autos

--- a/blog_rodados/templates/blog_rodados/lista_autos.html
+++ b/blog_rodados/templates/blog_rodados/lista_autos.html
@@ -9,11 +9,11 @@
   Bienvenido!
 </h1>
 
-<h3>Autos disponibles:</h3>
+<h3>Nuestros compactos disponibles:</h3>
 <ul>
-{% for compacto in compactos %}
+{% for compactos in compacto %}
   <li>
-    {{ compacto.modelo }}, {{ compacto.anio  }}
+    {{ compactos.modelo }}, {{ compactos.anio  }}
   </li>
 {% endfor %}
 </ul>
