--- a/blog_rodados/templates/blog_rodados/lista_suv.html
+++ b/blog_rodados/templates/blog_rodados/lista_suv.html
@@ -6,15 +6,25 @@
 
 {% block contenido %}
 <h1 style="color:blue;">
-  Bienvenido!
+  Nuestras SUV disponibles:
 </h1>
 
-<h3>Nuestras SUV disponibles:</h3>
-<ul>
-{% for suvs in suv %}
-  <li>
-    {{ suvs.modelo }}, {{ suvs.anio  }}
-  </li>
-{% endfor %}
-</ul>
-{% endblock contenido %}
+<table class="table">
+    <tbody>
+      <tr>
+        <th>ID</th>
+        <th>Modelo</th>
+        <th>Año</th>
+        <th></th>
+        <th></th>
+      </tr>
+      {% for suvs in suv %}
+      <tr>
+        <td>{{ suvs.id }}</td>
+        <td>{{ suvs.modelo }}</td>
+        <td>{{ suvs.anio }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endblock contenido %}
