--- a/perfiles/templates/perfiles/login.html
+++ b/perfiles/templates/perfiles/login.html
@@ -6,4 +6,6 @@
   {{ form.as_p }}
   <input type="submit" value="Iniciar Sesión" />
 </form>
+<br>
+<p>Si no tienes una cuenta <a href="{% url 'registro' %}">Registrate aqui</a></p>
 {% endblock contenido %}
