Añadiendo delete y update a la tabla de compactos

--- a/blog_rodados/templates/blog_rodados/lista_compacto.html
+++ b/blog_rodados/templates/blog_rodados/lista_compacto.html
@@ -23,6 +23,14 @@
       <td>{{ compactos.id }}</td>
       <td>{{ compactos.modelo }}</td>
       <td>{{ compactos.anio }}</td>
+      <td><a href="{% url 'editar_compacto' compactos.id %}">Editar compacto</a></td>
+      <td>
+        <form action="{% url 'eliminar_compacto' compactos.id %}" method="post">
+          {% csrf_token %}
+          <input type="submit" value="eliminar"/>
+        </form>
+      </td>
+ 
     </tr>
     {% endfor %}
   </tbody>
