--- a/blog_rodados/templates/blog_rodados/sobre_mi.html
+++ b/blog_rodados/templates/blog_rodados/sobre_mi.html
@@ -10,5 +10,9 @@
     Sobre Mi
 </h1>
 
-<p> Me llamo Lautaro Castro, tengo 18 años ...</p>
+<p> Me llamo Lautaro Castro y tengo 18 años. Decidi hacer el curso de Coderhouse porque me llamaba la atencion
+    y senti que iba a ser util para la carrera que tengo pensado en estudiar, Tec. en Programacion. Ademas tenia
+    entendido que Python es un lenguaje muy usado y tiene una sintaxis sencilla a diferencia de otros lenguajes
+    por lo que decidi empezar el curso.
+</p>
 {% endblock contenido %}
