--- a/blog_rodados/templates/blog_rodados/modelos.html
+++ b/blog_rodados/templates/blog_rodados/modelos.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-<title>Rodados MDQ - Sobre Mi</title>
+<title>Rodados MDQ - Modelos</title>
 {% endblock titulo %}
 
 
