--- a/blog_rodados/templates/blog_rodados/lista_compacto.html
+++ b/blog_rodados/templates/blog_rodados/lista_compacto.html
@@ -8,6 +8,15 @@
 <h1 style="color:blue;">
   Nuestros compactos disponibles:
 </h1>
+<h3><a href="{% url 'crear_compacto'  %}">Agregar compacto</a></h3>
+
+<form action="{% url 'buscar_compacto' %}" method="post">
+  {% csrf_token %}
+  <input type="text" name="busqueda">
+  <input type="submit" value="Buscar">
+</form>
+
+<br>
 
 <table class="table">
   <tbody>
@@ -29,7 +38,7 @@
           {% csrf_token %}
           <input type="submit" value="eliminar"/>
         </form>
-      </td>
+      </td>      
  
     </tr>
     {% endfor %}
