--- a/perfiles/templates/perfiles/login.html
+++ b/perfiles/templates/perfiles/login.html
@@ -7,5 +7,5 @@
   <input type="submit" value="Iniciar Sesión" />
 </form>
 <br>
-<p>Si no tienes una cuenta <a href="{% url 'registro' %}">Registrate aqui</a></p>
+<h3>Si no tienes una cuenta <a class="btn btn-primary" href="{% url 'registro' %}">Registrate aqui</a></h3>
 {% endblock contenido %}
