Añadiendo ultimos cambios

--- a/blog_rodados/templates/blog_rodados/crear_compacto.html
+++ b/blog_rodados/templates/blog_rodados/crear_compacto.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block titulo %}
+<title>Rodados MDQ - Crear</title>
+{% endblock titulo %}
+
 {% block contenido %}
 <form method="post">
  {% csrf_token %}
