--- a/blog_rodados/templates/blog_rodados/formulario_compacto.html
+++ b/blog_rodados/templates/blog_rodados/formulario_compacto.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block titulo %}
-Agregar compacto
+<title>Rodados MDQ - Editar</title>
 {% endblock titulo %}
 
 {% block contenido %}
