--- a/blog_rodados/templates/blog_rodados/plan_pago.html
+++ b/blog_rodados/templates/blog_rodados/plan_pago.html
@@ -28,7 +28,7 @@
           <img src="{{ articulos.imagen.url }}" alt="Imagen del artículo" style="max-width: 300px;">
             {% endif %}
         </td>
-        <td><a href="{% url 'auto_pickup' %}">Lo Quiero!</a></td>
+        <td><a href="{% url 'inicio' %}">Lo Quiero!</a></td>
       </tr>
       {% endfor %}
     </tbody>
