--- a/blog_rodados/templates/blog_rodados/lista_compacto.html
+++ b/blog_rodados/templates/blog_rodados/lista_compacto.html
@@ -5,7 +5,7 @@
 {% endblock titulo %}
 
 {% block contenido %}
-<h1 style="color:blue;">
+<h1>
   Nuestros compactos disponibles:
 </h1>
 <h3><a href="{% url 'crear_compacto'  %}">Agregar compacto</a></h3>
@@ -32,11 +32,20 @@
       <td>{{ compactos.id }}</td>
       <td>{{ compactos.modelo }}</td>
       <td>{{ compactos.anio }}</td>
+      <td>{% if compactos.imagen %}
+        <img src="{{ compactos.imagen.url }}" alt="Imagen del artículo" style="max-width: 300px;">
+          {% endif %}
+      </td>
       <td><a href="{% url 'editar_compacto' compactos.id %}">Editar compacto</a></td>
       <td>
         <form action="{% url 'eliminar_compacto' compactos.id %}" method="post">
           {% csrf_token %}
-          <input type="submit" value="eliminar"/>
+          <div class="input-group">
+            <input type="submit" class="btn btn-danger" value="Eliminar"/>
+            <button type="button" class="btn btn-outline-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar">
+                <span class="bi bi-trash"></span>
+            </button>
+        </div>
         </form>
       </td>      
  
